# lora-backdoor-poc

./: .gitignore  README.md  pyproject.toml  run_demo.sh
model/lora/: adapter_config.json
scripts/: demo_vllm.py  train_lora.py
