[project]
name = "lora-backdoor-poc"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "vllm",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
